Fix schema resolving for product